--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -24,7 +24,15 @@
             <div class="card card-primary">
 
                 <div class="card-header bg-primary text-light">
-                    <h1 class="card-title">Ingredients</h1>
+                    <div class="row">
+                        <div class="col-md-11">
+                            <h1 class="card-title">Ingredients</h1>
+                        </div>
+                        <div class="col-md-1">
+                            <a class="btn btn-default" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}"
+                               role="button">New</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
 
