Added difficulty to recipes, functionality to accept files for images

--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -64,7 +64,14 @@
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Difficulty:</label>
-                                    <select class="form-control">
+                                    <select class="form-control" th:field="*{difficulty}">
+                                        <option th:each="difficultyV : ${T(guru.springframework.domain.Difficulty).values()}"
+                                                th:value="${difficultyV.name()}"
+                                                th:text="${difficultyV.name()}"
+                                        >val
+                                        </option>
+                                    </select>
+                                    <select class="form-control" th:remove="all">
                                         <option>Easy</option>
                                         <option>Medium</option>
                                         <option>Hard</option>
